# kpi-api

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
dashboards/: Calendrier-1737832508319.json  Issue board-1737835441294.json  Issues-1737832481989.json  KPIs-1737832472945.json  Tableau de bord-1737832459394.json
src/kpi_api/: main.py
src/kpi_api/routes/: gitlab.py  kimai.py  nextcloud.py  screenshot.py
src/kpi_api/utils/: config.py  pagination.py
